defconfig: MSM memcpy enhancements & Use RBTREE for LMK
Change-Id: I6ca17ea25226f34e16b6f7c80c0488e7abaf0947

--- a/arch/arm/configs/elementalx_defconfig
+++ b/arch/arm/configs/elementalx_defconfig
@@ -541,6 +541,7 @@ CONFIG_MSM_UARTDM_Core_v14=y
 # CONFIG_MSM_BOOT_STATS is not set
 # CONFIG_MSM_XPU_ERR_FATAL is not set
 # CONFIG_MSM_CPR_REGULATOR is not set
+CONFIG_HAS_MACH_MEMUTILS=y
 
 #
 # System MMU
@@ -3136,6 +3137,7 @@ CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
 # CONFIG_ANDROID_SWITCH is not set
+CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 # CONFIG_ANDROID_INTF_ALARM_DEV is not set
 # CONFIG_PHONE is not set
 # CONFIG_USB_WPAN_HCD is not set
